# nerd-neck

./: .gitignore  Cargo.toml  LICENSE  readme.md  report.md
3dprint/: Pressfit-Bottom.stl  Pressfit-Top.stl  nerd-neck-casing-3.0-Top.stl  nerd-neck-casing-4.0-Bottom.stl  nerd-neck-casing-4.0-Top.stl
nerd-neck/: .gitignore  Cargo.toml
nerd-neck-report/: book.toml
nerd-neck-report/src/: SUMMARY.md  report.md
nerd-neck/.cargo/: config.toml
nerd-neck/src/: bmi160_adapter.rs  buzzer_adapter.rs  lib.rs  main.rs
utility/: Cargo.toml
utility/src/: angle.rs  filter.rs  lib.rs  madgwick_adapter.rs  mahony_ahrs_6_dof.rs  todo_mahony_6_dof.txt
