[package]
name = "nerd-neck"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }

esp-hal = { version = "0.22.0", features = [
    "esp32s3",
] }
esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-12288",
] }
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.5.0", features = ["esp32s3"] }
bmi160 = "1.1.0"

utility = { path = "../utility" }
embassy-sync = "0.6.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
